<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              tools:context=".fragment.TestFragment">

    <TextView
            android:id="@+id/tv_test_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fragment_string"/>

    <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/tv_test_tips_application"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fragment_application_string"/>

    <Button
            android:layout_marginTop="15dp"
            android:text="@string/test_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:id="@+id/bt_test_start"/>

    <Button
            android:layout_marginTop="15dp"
            android:text="@string/test_start_application"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:id="@+id/bt_test_start_application"/>

</LinearLayout>