<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_language"
            android:id="@+id/tv_system_language"
            android:gravity="center"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/tv_select_language"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_select_language"
            android:id="@+id/tv_select_language"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.485"/>
    <Button
            android:text="@string/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_settings"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_language"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"/>

</android.support.constraint.ConstraintLayout>